QjackCtl - JACK Audio Connection Kit Qt GUI Interface 
-----------------------------------------------------

ChangeLog


GIT HEAD

- Graph: Allow middle mouse button for grabbing and dragging the
  main canvas. (EXPERIMENTAL)

- Make up visual immediate feedback connectlons. (EXPERIMENTAL)


0.9.8  2022-10-03  An Early-Autumn'22 release.

- Graph: View / Repel Overlapping Nodes option added.

- Avoid nagging on D-BUS error messsage windows (or bubbles) when
  trying to start in pure JACK client mode (Active).

- Add current system user-name to the singleton/unique application
  instance identifier.

- Graph/Connect and Disconnect keyboard shortcuts added to existing
  [Ins] and [Del], as [Ctrl+C] and [Ctrl+D] respectively; also added
  [F2] as brand new keyboard shortcut for Edit/Rename...


0.9.7  2022-04-02  A Spring'22 Release.

- Main application icon is now presented in scalable format (SVG).

- Migrated command line parsing to QCommandLineParser/Option
  (Qt >= 5.2)

- Fixed translations path to be relative to application runtime.


0.9.6  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.

- Limit or mitigate fast auto-scrolling when moving Graph client
  nodes off the viewport.

- Whenever possible, adopt the previous named default preset,
  when starting the JACK-server on premises.

- Conditional fix to MacOSX and FreeBSD builds.



0.9.5  2021-10-05  An Autumn'21 Release.

- Streamlined Windows and MacOSX deliverables (by Alexis Murzeau).

- Korean (ko) translation added (by JungHee Lee).


0.9.4  2021-07-04  An Early-Summer'21 Release.

- All builds default to Qt6 (Qt >= 6.1) where available.

- CMake is now the official build system.


0.9.3  2021-05-11  A Spring'21 Release.

- Graph connection lines drop-shadow eye-candy has been optimized,
  improving a lot on moving highly-connected nodes, especially the
  ones with plenty of backward-curved connections.

- All packaging builds switching to CMake.
