@@ -1059,13 +1059,17 @@ void qjackctlGraphConnect::updatePathTo ( const QPointF& pos )
 	const qreal x_max = rect1.width() + h1;
 	const qreal x_min = qMin(x_max, qAbs(dx));
 	const qreal x_offset = (dx > 0.0 ? 0.5 : 1.0) * x_min;
-#if 0//Old "weird-outsider" connection line curves...
-	const qreal y_offset = (dx > 0.0 ? 0.0 : (dh > 0.0 ? +x_min : -x_min));
-#else//New "normal-insider" connection line curves...
-	const qreal h2 = m_port1->itemRect().height();
-	const qreal dy = qAbs(pos3_4.y() - pos1_2.y());
-	const qreal y_offset = (dx > -h2 || dy > h2 ? 0.0 : (dh > 0.0 ? +h2 : -h2));
-#endif
+
+	qreal y_offset = 0.0;
+	if (g_connect_through_nodes) {
+		// New "normal" connection line curves (inside/through nodes)...
+		const qreal h2 = m_port1->itemRect().height();
+		const qreal dy = qAbs(pos3_4.y() - pos1_2.y());
+		y_offset = (dx > -h2 || dy > h2 ? 0.0 : (dh > 0.0 ? +h2 : -h2));
+	} else {
+		// Old "weird" connection line curves (outside/around nodes)...
+		y_offset = (dx > 0.0 ? 0.0 : (dh > 0.0 ? +x_min : -x_min));
+	}
 
 	const QPointF pos2(pos1.x() + x_offset, pos1.y() + y_offset);
 	const QPointF pos3(pos4.x() - x_offset, pos4.y() + y_offset);
@@ -1200,6 +1204,21 @@ void qjackctlGraphConnect::updatePortTypeColors (void)
 		qjackctlGraphItem::setForeground(color);
 		qjackctlGraphItem::setBackground(color);
 	}
+}
+
+
+// Connector curve draw style (through vs. around nodes)
+//
+bool qjackctlGraphConnect::g_connect_through_nodes = false;
+
+void qjackctlGraphConnect::setConnectThroughNodes ( bool on )
+{
+	g_connect_through_nodes = on;
+}
+
+bool qjackctlGraphConnect::isConnectThroughNodes (void)
+{
+	return g_connect_through_nodes;
 }
 
 
@@ -2187,6 +2206,19 @@ void qjackctlGraphCanvas::updateNodes (void)
 			qjackctlGraphNode *node = static_cast<qjackctlGraphNode *> (item);
 			if (node)
 				node->updatePath();
+		}
+	}
+}
+
+
+// Update all connectors.
+void qjackctlGraphCanvas::updateConnects (void)
+{
+	foreach (QGraphicsItem *item, m_scene->items()) {
+		if (item->type() == qjackctlGraphConnect::Type) {
+			qjackctlGraphConnect *connect = static_cast<qjackctlGraphConnect *> (item);
+			if (connect)
+				connect->updatePath();
 		}
 	}
 }
